--- a/package.json
+++ b/package.json
@@ -15,31 +15,32 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.43.1",
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/kit": "^2.5.7",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@types/eslint": "^8.56.10",
-		"@types/uuid": "^9.0.8",
-		"@typescript-eslint/eslint-plugin": "^7.8.0",
-		"@typescript-eslint/parser": "^7.8.0",
-		"eslint": "^8.57.0",
+		"@playwright/test": "^1.47.0",
+		"@sveltejs/adapter-auto": "^3.2.4",
+		"@sveltejs/kit": "^2.5.26",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@types/eslint": "^9.6.1",
+		"@types/uuid": "^10.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.4.0",
+		"@typescript-eslint/parser": "^8.4.0",
+		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.38.0",
-		"fake-indexeddb": "^5.0.2",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
+		"eslint-plugin-svelte": "^2.43.0",
+		"fake-indexeddb": "^6.0.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "5.0.0-next.123",
-		"svelte-check": "^3.7.1",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.11",
-		"vitest": "^1.6.0"
+		"svelte-check": "^4.0.1",
+		"tslib": "^2.7.0",
+		"typescript": "^5.5.4",
+		"vite": "^5.4.3",
+		"vitest": "^2.0.5"
 	},
 	"type": "module",
 	"dependencies": {
+		"lucide-svelte": "^0.439.0",
 		"rss-parser": "^3.13.0",
-		"uuid": "^9.0.1",
+		"uuid": "^10.0.0",
 		"xmlbuilder": "^15.1.1"
 	}
 }
