--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@playwright/test": "^1.47.0",
 		"@sveltejs/adapter-auto": "^3.2.4",
 		"@sveltejs/kit": "^2.5.26",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@types/eslint": "^9.6.1",
 		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^8.4.0",
@@ -38,6 +38,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"events": "^3.3.0",
 		"lucide-svelte": "^0.439.0",
 		"rss-parser": "^3.13.0",
 		"uuid": "^10.0.0",
